2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vect-loop.c (vect_estimate_min_profitable_iters): Include
	the cost of generating loop masks.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vectorizer.h (vect_apply_runtime_profitability_check_p):
	New function.
	* tree-vect-loop-manip.c (vect_loop_versioning): Use it.
	* tree-vect-loop.c (vect_analyze_loop_2): Likewise.
	(vect_transform_loop): Likewise.
	(vect_analyze_loop_costing): Don't take the cost of versioning
	into account for the static profitability threshold if it turns
	out that no versioning is needed.

2019-11-13  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (cgraph_build_static_cdtor): Pass optimization_default_node
	and target_option_default_node to get -fprofile-generate ctors working
	right with LTO.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vectorizer.h (vect_nop_conversion_p): Declare.
	* tree-vect-stmts.c (vect_nop_conversion_p): New function.
	(vectorizable_assignment): Don't add a cost for nop conversions.
	* tree-vect-loop.c (vect_compute_single_scalar_iteration_cost):
	Likewise.
	* tree-vect-slp.c (vect_bb_slp_scalar_cost): Likewise.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vect-stmts.c (vect_model_promotion_demotion_cost): Take the
	number of ncopies as an additional argument.
	(vectorizable_conversion): Update call accordingly.  Use "modifier"
	to check whether a conversion is between vectors with the same
	numbers of units.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* config/aarch64/aarch64-sve-builtins-functions.h
	(unary_count::expand): Use aarch64_sve_int_mode instead of
	mode_for_int_vector.

2019-11-13  Martin Liska  <mliska@suse.cz>

	* opts.c: Update comment about OPT_LEVELS_2_PLUS_SPEED_ONLY.

2019-11-13  Martin Liska  <mliska@suse.cz>

	* tree-streamer-in.c (lto_input_ts_function_decl_tree_pointers):
	Remove call to finalize_options_struct.
